<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.simtechdata</groupId>
    <artifactId>WiFiRepeater</artifactId>
    <version>1.0</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <exec.mainClass>com.simtechdata.Launcher</exec.mainClass>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>19</version>
        </dependency>
        <dependency>
            <groupId>com.simtechdata</groupId>
            <artifactId>SceneOneFX</artifactId>
            <version>1.3.9</version>
        </dependency>
        <dependency>
            <groupId>com.simtechdata</groupId>
            <artifactId>EasyFXControls</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>io.github.classgraph</groupId>
            <artifactId>classgraph</artifactId>
            <version>4.8.152</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <!-- Maven Toolchains -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>19</version>
                            <vendor>sun</vendor>
                        </jdk>
                    </toolchains>
                </configuration>
            </plugin>
            <!-- Maven Compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <release>19</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <!-- Maven JavaFX -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <stripDebug>true</stripDebug>
                    <compress>2</compress>
                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>
                    <launcher>wifirepeater</launcher>
                    <jlinkImageName>wifirepeater</jlinkImageName>
                    <jlinkZipName>wifirepeaterzip</jlinkZipName>
                    <mainClass>com.simtechdata/${exec.mainClass}</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <!-- Default configuration for running -->
                        <!-- Usage: mvn clean javafx:run -->
                        <id>default-cli</id>
                    </execution>
                </executions>
            </plugin>
            <!-- Maven Dependency -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.2.0</version>
            </plugin>
            <!-- Maven Jar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <skipIfEmpty>true</skipIfEmpty>
                    <archive>
                        <manifestEntries>
                            <Main-Class>${exec.mainClass}</Main-Class>
                            <Automatic-Module-Name>com.simtechdata.wifirepeater</Automatic-Module-Name>
                            <Program-Version>${project.version}</Program-Version>
                            <Implementation-Version>${project.version}</Implementation-Version>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <!-- Java Packager -->
            <plugin>
                <groupId>io.github.fvarrui</groupId>
                <artifactId>javapackager</artifactId>
                <version>1.6.5</version>
                <configuration>
                    <mainClass>${exec.mainClass}</mainClass>
                    <bundleJre>true</bundleJre>
                    <customizedJre>false</customizedJre>
                    <generateInstaller>true</generateInstaller>
                    <administratorRequired>false</administratorRequired>
                    <copyDependencies>true</copyDependencies>
                </configuration>
                <executions>
                    <execution>
                        <id>windows</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <assetsDir>/Users/michael/IdeaProjects/WiFiRepeater/assets</assetsDir>
                            <platform>auto</platform>
                            <createZipball>false</createZipball>
                            <createTarball>true</createTarball>
                            <vmArgs>
                                <vmArg>--enable-preview</vmArg>
                            </vmArgs>
                            <winConfig>
                                <icoFile>C:\IdeaProjects\WiFiRepeater\assets\Windows\icon_512x512.png</icoFile>
                                <generateSetup>true</generateSetup>
                                <generateMsi>false</generateMsi>
                                <generateMsm>false</generateMsm>
                                <headerType>gui</headerType>
                                <setupMode>installForAllUsers</setupMode>
                                <disableRunAfterInstall>false</disableRunAfterInstall>
                                <removeOldLibs>true</removeOldLibs>
                                <createDesktopIconTask>true</createDesktopIconTask>
                                <removeOldLibs>true</removeOldLibs>
                            </winConfig>
                            <macConfig>
                                <icnsFile>/Users/michael/IdeaProjects/WiFiRepeater/assets/Mac/icon.icns</icnsFile>
                                <generateDmg>true</generateDmg>
                                <generatePkg>false</generatePkg>
                                <volumeName>WiFiRepeater</volumeName>
                                <volumeIcon>/Users/michael/IdeaProjects/WiFiRepeater/assets/Mac/icon.icns</volumeIcon>
                                <entitlements>entitlements.plist</entitlements>
                                <backgroundImage>/Users/michael/IdeaProjects/WiFiRepeater/assets/Mac/DMGBack.png</backgroundImage>
                                <windowWidth>620</windowWidth>
                                <windowHeight>480</windowHeight>
                            </macConfig>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
